--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "https://alesia-abanina.github.io/mesto/index.html",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --mode production",
-    "dev": "webpack serve"
+    "build": "webpack",
+    "dev": "webpack serve",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "repository": {
     "type": "git",
@@ -25,6 +27,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.1.2",
     "cssnano": "^4.1.10",
+    "gh-pages": "^3.1.0",
     "html-webpack-plugin": "^5.3.1",
     "mini-css-extract-plugin": "^1.3.9",
     "postcss-loader": "^5.1.0",
